--- a/client/jetpack-cloud/sections/manage/pricing/license-products-list/style.scss
+++ b/client/jetpack-cloud/sections/manage/pricing/license-products-list/style.scss
@@ -1,14 +1,6 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
-.product-license-price-with-discount__price-discount {
-	margin-inline-start: 8px;
-	font-size: 1rem;
-	font-weight: 500;
-	color: var(--studio-jetpack-green-50);
-	text-wrap: nowrap;
-}
-
 .jetpack-product-store__most-popular--heading,
 .jetpack-product-store__all-items--header {
 	margin-bottom: 0.5rem !important;
@@ -17,83 +9,149 @@
 .jetpack-product-store__most-popular--subheading,
 .jetpack-product-store__all-items--subheader {
 	color: var(--studio-gray-50);
+	font-size: $font-body-small;
 }
 
 .jetpack-product-store__all-items--grid {
 	padding-top: 2.5rem;
 }
 
-.main.is-wide-layout.jetpack-manage-pricing-page {
-	max-width: 1192px;
-	padding: 0 1rem; // this is for plans page on WPCOM
-
-	@include break-wide {
-		padding: 0;
-	}
-}
-
-
-.featured-item-card .multiple-choice-question,
-.simple-item-card .multiple-choice-question {
-	margin-block-start: 10px;
-	margin-block-end: 10px;
-
-	.form-legend {
-		display: none;
-	}
-
-	.multiple-choice-question__answers {
-		display: flex;
-		gap: 36px;
-	}
-
-	.multiple-choice-question__answer-item-content {
-		margin: 0;
-	}
-
-	.form-label {
-		font-size: 0.75rem;
-		line-height: 1.2;
-		margin: 0;
-	}
-
-	.form-radio:checked::before {
-		background: var(--studio-green-50);
-	}
-}
-
-.simple-item-card .multiple-choice-question {
-	margin-block-start: 0;
-	margin-block-end: 0;
-
-	.form-label {
-		line-height: 1.5;
-	}
-
-	.multiple-choice-question__answers {
-		gap: 20px;
-	}
-}
-.display-price__details {
-	color: var(--studio-gray-50);
-	font-size: 0.75rem;
-}
-.item-price .display-price .display-price__details {
-	padding-top: 0.1rem;
-}
-
-.simple-item-card div:has(.woocommerce-extension-plugin-icon) {
-	background: linear-gradient(160deg, #f5f5ff 7.24%, #f2edff 64.73%, #d8d6ff 116.53%);
-}
-
-.featured-item-card--body .license-lightbox-link {
-	padding-top: 0.5rem;
-}
-
-.simple-item-card .license-lightbox-link {
-	display: block;
-}
-
-.license-lightbox-link-icon {
+.jetpack-product-store__products-list .license-lightbox-link-icon {
 	display: none;
+}
+
+.featured-item-card,
+.simple-item-card {
+
+	.multiple-choice-question {
+		margin-block-start: 10px;
+		margin-block-end: 10px;
+
+		.form-legend {
+			display: none;
+		}
+
+		.multiple-choice-question__answers {
+			display: flex;
+			gap: 24px;
+		}
+
+		.multiple-choice-question__answer-item-content {
+			margin: 0;
+		}
+
+		.form-radio {
+			margin: 0;
+		}
+
+		.form-label {
+			font-size: $font-body-small;
+			line-height: 1.2;
+			margin: 0;
+		}
+
+		.form-radio:checked::before {
+			background: var(--studio-green-50);
+		}
+	}
+}
+
+.simple-item-card {
+
+	.multiple-choice-question {
+		margin-block-start: 0;
+		margin-block-end: 8px;
+
+		.form-radio {
+			margin: 2px 0 0;
+		}
+
+		.form-label {
+			line-height: 1.5;
+		}
+
+		.form-radio__label {
+			font-size: $font-body-small;
+		}
+
+		.multiple-choice-question__answers {
+			gap: 24px;
+		}
+	}
+
+	.license-lightbox-link {
+		display: block;
+	}
+
+	.item-price .display-price .is-discounted {
+		.plan-price__currency-symbol,
+		.plan-price__integer,
+		.plan-price__fraction {
+			font-size: 1rem;
+		}
+	}
+
+	div:has(.woocommerce-extension-plugin-icon) {
+		background: linear-gradient(160deg, #f5f5ff 7.24%, #f2edff 64.73%, #d8d6ff 116.53%);
+	}
+}
+
+.featured-item-card {
+	.featured-item-card--desc {
+		font-size: 1rem;
+	}
+	.featured-item-card--body .license-lightbox-link {
+		padding-top: 0.5rem;
+	}
+}
+
+.jetpack-product-store__most-popular--item .featured-item-card .display-price {
+	display: block !important;
+	.product-license-price-with-discount__price-discount {
+		font-size: $font-title-small;
+	}
+}
+
+@media (min-width: 480px) {
+	.item-price .display-price {
+		display: block !important;
+	}
+}
+
+
+.item-price .display-price {
+
+	display: block;
+
+	.display-price__details {
+		padding-top: 0.1rem;
+		color: var(--studio-gray-50);
+	}
+
+	.display-price__prices {
+		padding-right: 3px;
+	}
+
+	.product-license-price-with-discount__price-interval {
+		color: var(--studio-gray-50);
+		font-size: $font-body-extra-small;
+		padding-top: 4px;
+		display: block;
+	}
+
+	.product-license-price-with-discount__price-discount {
+		font-size: 1rem;
+		font-weight: 500;
+		color: var(--studio-jetpack-green-50);
+		text-wrap: nowrap;
+	}
+
+	.is-discounted {
+		.plan-price__currency-symbol,
+		.plan-price__integer,
+		.plan-price__fraction {
+			font-size: $font-title-small;
+		}
+	}
+
 }
