--- a/packages/design-preview/src/components/style.scss
+++ b/packages/design-preview/src/components/style.scss
@@ -191,7 +191,7 @@ $design-preview-sidebar-width: 311px;
 		.premium-badge,
 		.bundled-badge {
 			letter-spacing: 0.2px;
-			margin: 0;
+			margin: 0 8px 0 0;
 		}
 	}
 
