Add radius and bg color to mobile styles.

--- a/client/my-sites/stats/stats-subscribers-highlight-section/style.scss
+++ b/client/my-sites/stats/stats-subscribers-highlight-section/style.scss
@@ -55,6 +55,8 @@
 		display: flex;
 		align-items: center;
 		box-shadow: 0 0 0 1px var(--color-border-subtle);
+		border-radius: 5px; /* stylelint-disable-line scales/radii */
+		background: var(--color-surface);
 		padding: 12px;
 	}
 
