--- a/packages/plans-grid-next/src/_media-queries.scss
+++ b/packages/plans-grid-next/src/_media-queries.scss
@@ -5,7 +5,6 @@ $plan-features-header-banner-height: 20px;
 
 // Plan Features Grid Breakpoints
 $plans-2023-small-breakpoint: 780px;
-$plans-2023-medium-breakpoint: 1350px;
 
 $minWidthToGridWidthMap: (
 	780px: "668px",
@@ -13,27 +12,12 @@ $minWidthToGridWidthMap: (
 	1200px: "100%",
 );
 
-// Plan Comparison Grid Breakpoints
-$plans-comparison-small-breakpoint: 880px;
-$plans-comparison-medium-breakpoint: 1024px;
-$plans-comparison-large-breakpoint: 1281px;
-
-$planComparisonMinWidthToGridWidthMap: (
-	780px: "686px",
-	880px: "870px",
-	1024px: "1024px",
-	1281px: "1238px",
-);
-
-// TODO: Replace with use of $plan-features-sidebar-width
-$planComparisonMinWidthToGridWidthWithSidebarMap: (
-	1052px: "686px",
-	1152px: "870px",
-	1296px: "1024px",
-	1553px: "1238px",
-);
-
-
+/**
+ * @deprecated
+ * TODO clk used in plans-features-main / should migrate there
+ *   - creates a bit of snapping effect on the various breakpoints
+ *   - if it's not really necessary, we should remove it
+ */
 @mixin pricing-grid-breakpoints {
 	width: 100%;
 
@@ -44,37 +28,20 @@ $planComparisonMinWidthToGridWidthWithSidebarMap: (
 	}
 }
 
-@mixin plan-comparison-grid-breakpoints {
-	width: 100%;
-
-	@each $screenMinWidth, $gridWidth in $planComparisonMinWidthToGridWidthMap {
-		@media ( min-width: #{$screenMinWidth} ) {
-			width: #{$gridWidth};
-		}
-	}
-}
-
 /**
  * Media queries for the plans grid on the /plans page.
  * This should stretch to fill it's container.
+ *
+ * @deprecated
+ * TODO clk this should just be set as the default behavior for the grid
  */
 @mixin pricing-grid-breakpoints-with-sidebar {
 	width: 100%;
 }
 
-@mixin plan-comparison-grid-breakpoints-with-sidebar {
-	width: 100%;
-
-	@each $screenMinWidth, $gridWidth in $planComparisonMinWidthToGridWidthWithSidebarMap {
-		@media ( min-width: #{$screenMinWidth} ) {
-			width: #{$gridWidth};
-		}
-	}
-}
-
 /**
  * @deprecated
- * TODO clk Used in comparison grid
+ * TODO clk used in plans-features-main / should migrate there
  */
 @mixin plans-2023-break-small() {
 	body.is-section-stepper &,
@@ -92,31 +59,6 @@ $planComparisonMinWidthToGridWidthWithSidebarMap: (
 
 	.is-section-plans.is-sidebar-collapsed & {
 		@media ( min-width: $plans-2023-small-breakpoint ) {
-			@content;
-		}
-	}
-}
-
-/**
- * @deprecated
- * TODO clk Used in comparison grid
- */
-@mixin plans-2023-break-medium() {
-	body.is-section-stepper &,
-	body.is-section-signup.is-white-signup & {
-		@media ( min-width: $plans-2023-medium-breakpoint ) {
-			@content;
-		}
-	}
-
-	.is-section-plans:not(.is-sidebar-collapsed) & {
-		@media ( min-width: $plans-2023-medium-breakpoint + $plan-features-sidebar-width ) {
-			@content;
-		}
-	}
-
-	.is-section-plans.is-sidebar-collapsed & {
-		@media ( min-width: $plans-2023-medium-breakpoint ) {
 			@content;
 		}
 	}
