Update post trends element gaps with relative unit

--- a/client/my-sites/stats/post-trends/style.scss
+++ b/client/my-sites/stats/post-trends/style.scss
@@ -47,7 +47,7 @@ $lowestLevelColor: var(--color-neutral-5);
 }
 
 .post-trends__year {
-	margin-top: 16px;
+	margin-top: 1em;
 	padding: 16px 2px;
 	display: flex;
 	justify-content: space-between;
