Fix colour variable

--- a/client/my-sites/customer-home/cards/features/site-preview/style.scss
+++ b/client/my-sites/customer-home/cards/features/site-preview/style.scss
@@ -73,7 +73,7 @@
 
 		.gridicon {
 			cursor: pointer;
-			fill: var(--color-neutral-light);
+			fill: var(--color-text-subtle);
 		}
 
 		&.is-open .gridicon {
