convert wrapper to flex. remove max-width on container. keep max-width for cells

--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -736,6 +736,8 @@ body.is-section-signup.is-white-signup {
 }
 
 .plan-comparison-grid {
+	display: flex; // required to make grid not stretch with container
+
 	.plan-features-2023-gridrison__actions {
 		margin-bottom: auto;
 
