--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -102,6 +102,7 @@
 		height: 100%;
 		cursor: default;
 	}
+
 	.developer-survey-notice__popup {
 		position: absolute;
 		right: 25px;
@@ -131,16 +132,19 @@
 				letter-spacing: -0.15px;
 			}
 
-			.developer-survey-notice__popup-head-close {
-				svg {
-					fill: var(--studio-white);
-				}
+			.developer-survey-notice__popup-head-close svg {
+				fill: var(--studio-white);
 			}
 		}
 
-		.developer-survey-notice__popup-img img {
-			width: 100%;
-			display: block;
+		.developer-survey-notice__popup-img {
+			background: #0675c4;
+			height: 241px;
+
+			img {
+				width: 100%;
+				display: block;
+			}
 		}
 
 		.developer-survey-notice__popup-content {
@@ -154,6 +158,7 @@
 				letter-spacing: -0.32px;
 				padding-bottom: 8px;
 			}
+
 			.developer-survey-notice__popup-content-description {
 				font-size: rem(14px);
 				line-height: 20px;
@@ -174,6 +179,7 @@
 					line-height: 20px;
 					letter-spacing: -0.15px;
 				}
+
 				.developer-survey-notice__popup-content-buttons-cancel {
 					font-family: $font-sf-pro-text;
 					padding: 8px 14px;
