--- a/client/a8c-for-agencies/style.scss
+++ b/client/a8c-for-agencies/style.scss
@@ -9,6 +9,7 @@
 	--color-text-gray: "#333";
 	--color-sidebar-text-alternative: #bbe0fa;
 
+	// FIXME: Need to move this colors to a color scheme file
 	--color-scary-0: var(--studio-red-0);
 	--color-scary-5: var(--studio-red-5);
 	--color-scary-40: var(--studio-red-40);
@@ -46,10 +47,46 @@
 	--color-primary-90-rgb: var(--studio-automattic-blue-90-rgb);
 	--color-primary-100: var(--studio-automattic-blue-100);
 	--color-primary-100-rgb: var(--studio-automattic-blue-100-rgb);
+
+	--color-accent: var(--studio-gray-50);
+	--color-accent-rgb: var(--studio-gray-50-rgb);
+	--color-accent-dark: var(--studio-gray-70);
+	--color-accent-dark-rgb: var(--studio-gray-70-rgb);
+	--color-accent-light: var(--studio-gray-30);
+	--color-accent-light-rgb: var(--studio-gray-30-rgb);
+	--color-accent-0: var(--studio-gray-0);
+	--color-accent-0-rgb: var(--studio-gray-0-rgb);
+	--color-accent-5: var(--studio-gray-5);
+	--color-accent-5-rgb: var(--studio-gray-5-rgb);
+	--color-accent-10: var(--studio-gray-10);
+	--color-accent-10-rgb: var(--studio-gray-10-rgb);
+	--color-accent-20: var(--studio-gray-20);
+	--color-accent-20-rgb: var(--studio-gray-20-rgb);
+	--color-accent-30: var(--studio-gray-30);
+	--color-accent-30-rgb: var(--studio-gray-30-rgb);
+	--color-accent-40: var(--studio-gray-40);
+	--color-accent-40-rgb: var(--studio-gray-40-rgb);
+	--color-accent-50: var(--studio-gray-50);
+	--color-accent-50-rgb: var(--studio-gray-50-rgb);
+	--color-accent-60: var(--studio-gray-60);
+	--color-accent-60-rgb: var(--studio-gray-60-rgb);
+	--color-accent-70: var(--studio-gray-70);
+	--color-accent-70-rgb: var(--studio-gray-70-rgb);
+	--color-accent-80: var(--studio-gray-80);
+	--color-accent-80-rgb: var(--studio-gray-80-rgb);
+	--color-accent-90: var(--studio-gray-90);
+	--color-accent-90-rgb: var(--studio-gray-90-rgb);
+	--color-accent-100: var(--studio-gray-100);
+	--color-accent-100-rgb: var(--studio-gray-100-rgb);
 }
 
 .theme-a8c-for-agencies {
 	.button {
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		white-space: nowrap;
+
 		box-sizing: border-box;
 		border-radius: 4px;
 	}
@@ -63,11 +100,16 @@
 	}
 
 	.button.is-primary {
-		background-color: var(--studio-automattic-blue-40);
-		border-color: var(--studio-automattic-blue-40);
+		background-color: var(--color-primary-50);
+		border-color: var(--color-primary-50);
+		fill: var(--color-text-inverted);
 
+		&:hover,
 		&:focus,
 		&:focus-visible {
+			background-color: var(--color-primary-70);
+			border-color: var(--color-primary-70);
+			color: var(--color-text-inverted);
 			box-shadow: none;
 			border: 1px solid;
 		}
@@ -80,25 +122,25 @@
 	}
 
 	.components-form-toggle.is-checked .components-form-toggle__track {
-		background-color: var(--studio-automattic-blue-60);
-		border-color: var(--studio-automattic-blue-60);
+		background-color: var(--color-primary-60);
+		border-color: var(--color-primary-60);
 	}
 
 	.components-checkbox-control__input[type="checkbox"]:checked,
 	.components-checkbox-control__input[type="checkbox"]:indeterminate {
-		background: var(--studio-automattic-blue-60);
-		border-color: var(--studio-automattic-blue-60);
+		background: var(--color-primary-60);
+		border-color: var(--color-primary-60);
 	}
 
 	.components-button.is-tertiary {
-		color: var(--studio-automattic-blue-60);
+		color: var(--color-primary-60);
 	}
 
 	.button.is-borderless.is-primary.is-active,
 	.button.is-borderless.is-primary:active,
 	.button.is-borderless.is-primary:focus,
 	.button.is-borderless.is-primary:hover {
-		color: var(--studio-automattic-blue-60);
+		color: var(--color-primary-60);
 	}
 
 	// Masterbar
@@ -226,11 +268,4 @@ html {
 
 .site-selector .site-selector__actions {
 	padding: 16px;
-}
-
-.button.is-primary:hover,
-.button.is-primary:focus {
-	background-color: var(--studio-automattic-blue-70);
-	border-color: var(--studio-automattic-blue-70);
-	color: var(--color-text-inverted);
 }
