--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -51,6 +51,11 @@
 		.dataviews-view-table tr td:first-child {
 			padding-left: 64px;
 		}
+		.dataviews-view-table tr th:last-child,
+		.dataviews-view-table tr td:last-child {
+			padding-right: 64px;
+			width: 20px;
+		}
 	}
 
 	@media (max-width: 660px) {
@@ -113,7 +118,11 @@
 
 		.dataviews-view-table tr th:first-child,
 		.dataviews-view-table tr td:first-child {
-			padding-left: 16px;
+			padding: 8px 24px 8px 8px;
+		}
+		.dataviews-view-table tr td:last-child {
+			padding: 0;
+			padding-inline-end: 8px;
 		}
 
 		.components-button.is-compact.has-icon:not(.has-text).dataviews-filters-button {
