--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
@@ -2,10 +2,12 @@
 	flex-grow: 1;
 	background-color: var(--studio-white);
 	padding: 48px;
-	text-align: center;
+	text-align: left;
 	overflow-y: auto;
 
 	.expanded-card {
+		margin: 32px 0;
+		text-align: left;
 		width: auto;
 		max-width: unset !important;
 
@@ -57,6 +59,9 @@
 
 	text-align: unset !important;
 
+	.expanded-card {
+		margin: 0;
+	}
 
 	.site-expanded-content__card-content-column {
 		max-width: unset;
