--- a/client/my-sites/earn/style.scss
+++ b/client/my-sites/earn/style.scss
@@ -113,6 +113,39 @@
 	}
 }
 
+.earn__ads-header {
+	margin: 20px 0;
+
+	h2.formatted-header__title {
+		margin: 0 0 12px;
+		font-size: $font-size-header-small;
+	}
+
+	.section-nav {
+		box-shadow: none;
+		background: none;
+	}
+
+	.section-nav-tab {
+		&:hover:not(.is-selected) {
+			border-bottom-color: transparent;
+		}
+		&.is-selected {
+			border-bottom: none;
+			.section-nav-tab__link {
+				color: var(--color-text);
+			}
+		}
+	}
+	.section-nav-tab__link {
+		padding: 0 20px 10px 0;
+		color: var(--color-link);
+		&:hover {
+			background-color: transparent;
+		}
+	}
+}
+
 @include break-wide {
 	.earn .promo-card.is-primary {
 		padding-left: 72px;
